--- a/gateways/phone/Rakefile
+++ b/gateways/phone/Rakefile
@@ -7,6 +7,4 @@ Bundler.require :development
 require 'adhearsion/tasks'
 
 require 'rspec/core/rake_task'
-RSpec::Core::RakeTask.new(:spec) do |t|
-  t.ruby_opts = "-w"
-end
+RSpec::Core::RakeTask.new(:spec)
