--- a/web/Gemfile
+++ b/web/Gemfile
@@ -35,20 +35,20 @@ end
 
 group :development, :test do
   gem 'rspec-rails'
-  gem 'mocha'
-  gem 'rspec-rails-mocha', :require => false
   gem 'jasmine-rails'
-  gem 'factory_girl_rails'
-
-  gem 'cucumber-rails', '~> 1.3'
-  gem 'database_cleaner'
-  gem 'launchy'
-  gem 'capybara'
 
   gem 'guard'
   gem 'guard-rspec'
-  gem 'guard-cucumber'
   gem 'guard-rails-assets'
   gem 'guard-jasmine-headless-webkit'
   gem 'ruby_gntp'
+end
+
+group :test do
+  gem 'mocha'
+  gem 'rspec-rails-mocha', :require => false
+  gem 'factory_girl_rails'
+  gem 'database_cleaner'
+  gem 'launchy'
+  gem 'capybara'
 end
