--- a/api/Gemfile
+++ b/api/Gemfile
@@ -9,6 +9,7 @@ gem 'airbrake'
 gem 'devise'
 gem 'omniauth'
 gem 'omniauth-github'
+gem 'omniauth-twitter'
 
 # Gems used only for assets and not required
 # in production environments by default.
