Install foreman in dev environment

--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -26,7 +26,8 @@ Vagrant::Config.run do |config|
             'global'  => '1.9.3-p194',
             'gems'    => {
               '1.9.3-p194' => [
-                { 'name' => 'bundler' }
+                { 'name' => 'bundler' },
+                { 'name' => 'foreman' }
               ]
             }
           }
