--- a/api/Gemfile
+++ b/api/Gemfile
@@ -58,5 +58,7 @@ group :test do
   gem 'database_cleaner'
   gem 'launchy'
   gem 'capybara'
+  gem 'capybara-email'
+  gem 'action_mailer_cache_delivery'
   gem 'poltergeist'
 end
