--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant::Config.run do |config|
-  config.vm.box       = "lucid32"
+  config.vm.box       = "precise64"
   config.vm.host_name = "dev.adam.local"
 
   config.vm.customize do |vm|
