[API] Publish events to AMQP when JIDs are added/modified/removed

--- a/dev.env.example
+++ b/dev.env.example
@@ -3,3 +3,6 @@ GITHUB_KEY=
 GITHUB_SECRET=
 TWITTER_KEY=
 TWITTER_SECRET=
+RAILS_AMQP_HOST=adam.local
+RAILS_AMQP_USERNAME=rails
+RAILS_AMQP_PASSWORD=password
