Get an XMPP gateway running

--- a/dev.env.example
+++ b/dev.env.example
@@ -6,3 +6,5 @@ TWITTER_SECRET=
 RAILS_AMQP_HOST=adam.local
 RAILS_AMQP_USERNAME=rails
 RAILS_AMQP_PASSWORD=password
+ADAM_XMPP_JID=adam@adam.local
+ADAM_XMPP_PASSWORD=abc123
