--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -6,8 +6,9 @@ Vagrant::Config.run do |config|
     vm.name = "Adam Snark Rabbit Development Environment"
   end
 
+  config.vm.customize ['modifyvm', :id, '--natdnshostresolver1', 'on']
+
   config.vm.network :hostonly, "192.168.33.100"
-  config.vm.forward_port 3000, 3000
 
   config.vm.share_folder "adam", "/home/vagrant/adam", "..", nfs: true
 
@@ -19,7 +20,7 @@ Vagrant::Config.run do |config|
     chef.add_role "dev"
 
     chef.json = {
-      jabber_domain: 'adamrabbit.com',
+      jabber_domain: 'adam.local',
       'rbenv' => {
         'user_installs' => [
           { 'user'    => 'vagrant',
