--- a/dev.env.example
+++ b/dev.env.example
@@ -3,8 +3,12 @@ GITHUB_KEY=
 GITHUB_SECRET=
 TWITTER_KEY=
 TWITTER_SECRET=
-RAILS_AMQP_HOST=adam.local
-RAILS_AMQP_USERNAME=rails
-RAILS_AMQP_PASSWORD=password
-ADAM_XMPP_JID=adam@adam.local
-ADAM_XMPP_PASSWORD=abc123
+ADAM_MEMORY_AMQP_HOST=localhost
+ADAM_MEMORY_AMQP_USERNAME=rails
+ADAM_MEMORY_AMQP_PASSWORD=password
+ADAM_FINGERS_JID=adam@adam.local
+ADAM_FINGERS_PASSWORD=abc123
+ADAM_FINGERS_DEBUG=true
+ADAM_FINGERS_AMQP_HOST=adam.local
+ADAM_FINGERS_AMQP_USERNAME=fingers
+ADAM_FINGERS_AMQP_PASSWORD=password
