--- a/dev.env.example
+++ b/dev.env.example
@@ -12,3 +12,6 @@ ADAM_FINGERS_DEBUG=true
 ADAM_FINGERS_AMQP_HOST=adam.local
 ADAM_FINGERS_AMQP_USERNAME=fingers
 ADAM_FINGERS_AMQP_PASSWORD=password
+ADAM_BRAIN_AMQP_HOST=adam.local
+ADAM_BRAIN_AMQP_USERNAME=brain
+ADAM_BRAIN_AMQP_PASSWORD=password
