--- a/fingers/Gemfile
+++ b/fingers/Gemfile
@@ -1,7 +1,6 @@
 source "http://rubygems.org"
 
-gem 'blather'
-gem 'eventmachine', '0.12.10'
+gem 'blather', github: 'adhearsion/blather'
 gem 'amqp'
 gem 'adam_common', path: '../adam_common'
 
