--- a/dev.env.example
+++ b/dev.env.example
@@ -5,12 +5,12 @@ TWITTER_SECRET=
 ADAM_MEMORY_AMQP_HOST=localhost
 ADAM_MEMORY_AMQP_USERNAME=rails
 ADAM_MEMORY_AMQP_PASSWORD=password
-ADAM_FINGERS_JID=adam@adam.local
+ADAM_FINGERS_JID=adam@local.adamrabbit.net
 ADAM_FINGERS_PASSWORD=abc123
 ADAM_FINGERS_DEBUG=true
-ADAM_FINGERS_AMQP_HOST=adam.local
+ADAM_FINGERS_AMQP_HOST=local.adamrabbit.net
 ADAM_FINGERS_AMQP_USERNAME=fingers
 ADAM_FINGERS_AMQP_PASSWORD=password
-ADAM_BRAIN_AMQP_HOST=adam.local
+ADAM_BRAIN_AMQP_HOST=local.adamrabbit.net
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
