--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -1,3 +1,5 @@
+require 'berkshelf/vagrant'
+
 Vagrant::Config.run do |config|
   config.vm.box       = "precise64"
   config.vm.host_name = "local.adamrabbit.net"
@@ -7,7 +9,6 @@ Vagrant::Config.run do |config|
   config.vm.share_folder "adam", "/home/vagrant/adam", "..", nfs: true
 
   config.vm.provision :chef_solo do |chef|
-    chef.cookbooks_path = "cookbooks"
     chef.roles_path = "roles"
     chef.data_bags_path = "data_bags"
 
