--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -2,6 +2,7 @@ require 'berkshelf/vagrant'
 
 Vagrant::Config.run do |config|
   config.vm.box       = "precise64"
+  config.vm.box_url   = "http://files.vagrantup.com/precise64.box"
   config.vm.host_name = "local.adamrabbit.net"
 
   config.vm.network :hostonly, "192.168.33.100"
