[DEPLOY] Make it possible to deploy a 'standalone' version of the dev box for CI/demo purposes
This method allows developers to share their local checkout of the main repo with the dev VM by default, allowing active modifications, or alternatively to deploy the dev environment such that the app is deployed directly to it as in production. The latter method is used for CI for containment and production-mirroring purposes.

Also use rvm, a global ruby install and binary ruby (for speed)

--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant::Config.run do |config|
 
   config.vm.network :hostonly, "192.168.33.100"
 
-  config.vm.share_folder "adam", "/home/vagrant/adam", "..", nfs: true
+  config.vm.share_folder "adam", "/srv/adam/current", "..", nfs: true unless ENV['STANDALONE_DEPLOYMENT']
 
   config.vm.provision :chef_solo do |chef|
     chef.roles_path = "roles"
@@ -18,21 +18,19 @@ Vagrant::Config.run do |config|
     chef.json = {
       jabber_domain: 'local.adamrabbit.net',
       'rbenv' => {
-        'user_installs' => [
-          { 'user'    => 'vagrant',
-            'rubies'  => ['1.9.3-p194'],
-            'global'  => '1.9.3-p194',
-            'gems'    => {
-              '1.9.3-p194' => [
-                { 'name' => 'bundler' },
-                { 'name' => 'foreman' }
-              ]
-            }
-          }
-        ]
+        "default_ruby"  => "1.9.3-p374",
+        "rubies"        => ["1.9.3-p374"],
+        "gems" => {
+          "1.9.3-p374" => [
+            {"name" => "rake"},
+            {"name" => "bundler"},
+            {"name" => "foreman"}
+          ]
+        }
       },
       'adam' => {
-        'deploy_key' => File.read('deploy_key')
+        'standalone_deployment' => ENV['STANDALONE_DEPLOYMENT'].present?,
+        'deploy_key' => ENV['STANDALONE_DEPLOYMENT'] ? File.read('deploy_key') : nil
       }
     }
 
