[BRAIN] Initial support for translating text to a specified language

--- a/dev.env.example
+++ b/dev.env.example
@@ -14,3 +14,6 @@ ADAM_FINGERS_AMQP_PASSWORD=password
 ADAM_BRAIN_AMQP_HOST=local.adamrabbit.net
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
+
+BING_TRANSLATE_KEY=
+BING_TRANSLATE_SECRET=
