--- a/brain/Gemfile
+++ b/brain/Gemfile
@@ -3,6 +3,10 @@ source "http://rubygems.org"
 gem 'amqp'
 gem 'adam_common', path: '../adam_common'
 
+# Translate Neuron
+gem 'bing_translator'
+gem 'iso-639'
+
 group :development, :test do
   gem 'rspec'
   gem 'guard'
