[DEPLOY] Why isn't CI using the deploy key correctly?

--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -24,6 +24,10 @@ Vagrant::Config.run do |config|
       }
     }
 
+    p chef.json
+    p ENV
+    p File.read('deploy_key')
+
     chef.log_level = :debug
   end
 
