[MEMORY] Add production mongoid config

--- a/memory/config/mongoid.yml
+++ b/memory/config/mongoid.yml
@@ -66,3 +66,12 @@ test:
         - 127.0.0.1:27017
       options:
         consistency: :strong
+
+production:
+  sessions:
+    default:
+      database: asr_production
+      hosts:
+        - 127.0.0.1:27017
+      options:
+        consistency: :strong
