--- a/memory/Gemfile
+++ b/memory/Gemfile
@@ -19,6 +19,8 @@ group :assets do
   gem 'sass-rails',   '~> 3.1'
   gem 'coffee-rails', '~> 3.1'
   gem 'uglifier',     '>= 1.0.3'
+  gem 'therubyracer'
+  gem 'less-rails'
 end
 
 gem 'jquery-rails'
