--- a/memory/public/assets/manifest.yml
+++ b/memory/public/assets/manifest.yml
@@ -1,31 +1,17 @@
 ---
-application.js: application-30939899585cf2854059a1905b2feb91.js
-application.css: application-975119d9c2658cdd48447cbaf2c07681.css
-web-app-theme/icons/application_edit.png: web-app-theme/icons/application_edit-a15365a0107233f60dd151a05542e489.png
-web-app-theme/icons/cross.png: web-app-theme/icons/cross-c7cecbf2f882d83d76089292bd4b0ddf.png
-web-app-theme/icons/tick.png: web-app-theme/icons/tick-64f108801155bd6b82a5471d038f25ea.png
-web-app-theme/themes/activo/images/arrow.png: web-app-theme/themes/activo/images/arrow-4f919b298ed93a87fcf06b0fd08679b2.png
-web-app-theme/themes/activo/images/boxbar-background.png: web-app-theme/themes/activo/images/boxbar-background-644d0cd45d40da6d70d0749b1e44e13e.png
-web-app-theme/themes/activo/images/button-background-active.png: web-app-theme/themes/activo/images/button-background-active-36b8d3f1833bb9d62fe0521cfd934b01.png
-web-app-theme/themes/activo/images/button-background.png: web-app-theme/themes/activo/images/button-background-5b61356d15c4bdbd83b77e153f9a8f94.png
-web-app-theme/themes/activo/images/menubar-background.png: web-app-theme/themes/activo/images/menubar-background-2ae13549a4b4b52cd1a1089acd4be65d.png
-web-app-theme/themes/default/images/arrow.png: web-app-theme/themes/default/images/arrow-3f185505e0840fbdd77876abb307bffe.png
-web-app-theme/themes/default/images/bgd.jpg: web-app-theme/themes/default/images/bgd-1c4ae5a1795ce494ee6dbe730684e8fc.jpg
-web-app-theme/themes/default/images/boxbar-background.png: web-app-theme/themes/default/images/boxbar-background-da4574963a4776a00aa2f3b9e99cd200.png
-web-app-theme/themes/default/images/button-background-active.png: web-app-theme/themes/default/images/button-background-active-a0c80b16af7e4259c1cb4b256ac6cd6a.png
-web-app-theme/themes/default/images/button-background.png: web-app-theme/themes/default/images/button-background-baf8b3b0a9327f11852a07cc8ed5067b.png
-web-app-theme/themes/default/images/messages/error.png: web-app-theme/themes/default/images/messages/error-7d4e005f33365cb85f4a3db51cac36c9.png
-web-app-theme/themes/default/images/messages/notice.png: web-app-theme/themes/default/images/messages/notice-c0f5ba9e9d2010de2e043ad4ed1f3b54.png
-web-app-theme/themes/default/images/messages/warning.png: web-app-theme/themes/default/images/messages/warning-7847b76c50f62ccfb383eca97daec65f.png
-web-app-theme/themes/default/fonts/museo700-regular-webfont.eot: web-app-theme/themes/default/fonts/museo700-regular-webfont-ec339a8cc12074cc96d25e374aec4bb3.eot
-web-app-theme/themes/default/fonts/museo700-regular-webfont.svg: web-app-theme/themes/default/fonts/museo700-regular-webfont-9d78e69578fc177d07aa9dbd72cb9ee1.svg
-web-app-theme/themes/default/fonts/museo700-regular-webfont.ttf: web-app-theme/themes/default/fonts/museo700-regular-webfont-088236b13b4ce033675298ab50c83156.ttf
-web-app-theme/themes/default/fonts/museo700-regular-webfont.woff: web-app-theme/themes/default/fonts/museo700-regular-webfont-4abdd11d6bc2d32c4f72f2f6daa99e88.woff
-web-app-theme/themes/default/fonts/museosans_500-webfont.eot: web-app-theme/themes/default/fonts/museosans_500-webfont-b3a88211385883eb548ee5b16ff0dbce.eot
-web-app-theme/themes/default/fonts/museosans_500-webfont.svg: web-app-theme/themes/default/fonts/museosans_500-webfont-9c89e4c243befcf77de90a452c4a60a0.svg
-web-app-theme/themes/default/fonts/museosans_500-webfont.ttf: web-app-theme/themes/default/fonts/museosans_500-webfont-eaa5c0d60e796ada7f984fc4fd5bcb4f.ttf
-web-app-theme/themes/default/fonts/museosans_500-webfont.woff: web-app-theme/themes/default/fonts/museosans_500-webfont-659429bee02b316e7047647b7003da67.woff
-web-app-theme/themes/default/fonts/museosans_500_italic-webfont.eot: web-app-theme/themes/default/fonts/museosans_500_italic-webfont-dc845304c940f0c5b35649434823f439.eot
-web-app-theme/themes/default/fonts/museosans_500_italic-webfont.svg: web-app-theme/themes/default/fonts/museosans_500_italic-webfont-b85a7c192312c859f474a07e9c09c9d2.svg
-web-app-theme/themes/default/fonts/museosans_500_italic-webfont.ttf: web-app-theme/themes/default/fonts/museosans_500_italic-webfont-5d4db0fb73cd47f02c0b0fb479bfc99a.ttf
-web-app-theme/themes/default/fonts/museosans_500_italic-webfont.woff: web-app-theme/themes/default/fonts/museosans_500_italic-webfont-35636c1b33077852d324640ecc9806c4.woff
+application.js: application-7638fe7715c81fc22ef95a1fd19ddff9.js
+application/index.js: application-7638fe7715c81fc22ef95a1fd19ddff9.js
+application.css: application-cb430167520c29f43518c4b40c4ccc8f.css
+application/index.css: application-cb430167520c29f43518c4b40c4ccc8f.css
+fontawesome-webfont.eot: fontawesome-webfont-d1a87f253d164f9455111cf8108b946d.eot
+fontawesome-webfont/index.eot: fontawesome-webfont-d1a87f253d164f9455111cf8108b946d.eot
+fontawesome-webfont.svg: fontawesome-webfont-c3f3594758768fbb43eae746d18b3b50.svg
+fontawesome-webfont/index.svg: fontawesome-webfont-c3f3594758768fbb43eae746d18b3b50.svg
+fontawesome-webfont.ttf: fontawesome-webfont-f6efbd0570bf4cf4fb12122c18bbb1df.ttf
+fontawesome-webfont/index.ttf: fontawesome-webfont-f6efbd0570bf4cf4fb12122c18bbb1df.ttf
+fontawesome-webfont.woff: fontawesome-webfont-a16deda648110d250b072cfdf2ae0f14.woff
+fontawesome-webfont/index.woff: fontawesome-webfont-a16deda648110d250b072cfdf2ae0f14.woff
+twitter/bootstrap/glyphicons-halflings-white.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+twitter/bootstrap/glyphicons-halflings-white/index.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+twitter/bootstrap/glyphicons-halflings.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+twitter/bootstrap/glyphicons-halflings/index.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
