[MEMORY] Make user data available via HTTP API

--- a/dev.env.example
+++ b/dev.env.example
@@ -3,6 +3,7 @@ GITHUB_KEY=
 GITHUB_SECRET=
 TWITTER_KEY=
 TWITTER_SECRET=
+ADAM_INTERNAL_PASSWORD=abc123
 ADAM_MEMORY_AMQP_HOST=localhost
 ADAM_MEMORY_AMQP_USERNAME=rails
 ADAM_MEMORY_AMQP_PASSWORD=password
