--- a/dev.env.example
+++ b/dev.env.example
@@ -16,6 +16,7 @@ ADAM_FINGERS_AMQP_PASSWORD=password
 ADAM_BRAIN_AMQP_HOST=local.adamrabbit.net
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
+ADAM_ROOT_DOMAIN=local.adamrabbit.net
 
 BING_TRANSLATE_KEY=
 BING_TRANSLATE_SECRET=
