--- a/memory/public/assets/manifest.yml
+++ b/memory/public/assets/manifest.yml
@@ -1,8 +1,8 @@
 ---
-application.js: application-7638fe7715c81fc22ef95a1fd19ddff9.js
-application/index.js: application-7638fe7715c81fc22ef95a1fd19ddff9.js
-application.css: application-cb430167520c29f43518c4b40c4ccc8f.css
-application/index.css: application-cb430167520c29f43518c4b40c4ccc8f.css
+application.js: application-7b3f11d03e0d7ee5c142207e085ba379.js
+application/index.js: application-7b3f11d03e0d7ee5c142207e085ba379.js
+application.css: application-5971a8d094baeec32819c209949bb23d.css
+application/index.css: application-5971a8d094baeec32819c209949bb23d.css
 fontawesome-webfont.eot: fontawesome-webfont-d1a87f253d164f9455111cf8108b946d.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-d1a87f253d164f9455111cf8108b946d.eot
 fontawesome-webfont.svg: fontawesome-webfont-c3f3594758768fbb43eae746d18b3b50.svg
@@ -15,3 +15,5 @@ twitter/bootstrap/glyphicons-halflings-white.png: twitter/bootstrap/glyphicons-h
 twitter/bootstrap/glyphicons-halflings-white/index.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 twitter/bootstrap/glyphicons-halflings.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
 twitter/bootstrap/glyphicons-halflings/index.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+jquery.min.map: jquery.min-959a5819c76e1508f5a8655c289c0de8.map
+jquery/index.min.map: jquery.min-959a5819c76e1508f5a8655c289c0de8.map
