[BRAIN] Better logging
Including full stack traces for exceptions

--- a/brain/Gemfile
+++ b/brain/Gemfile
@@ -13,6 +13,8 @@ gem 'pipejump'
 gem 'faraday'
 gem 'faraday_middleware'
 
+gem 'logging'
+
 group :development, :test do
   gem 'rspec'
   gem 'guard'
