[DEPLOY] Don't require activesupport to boot the dev VM

--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -20,7 +20,7 @@ Vagrant::Config.run do |config|
       'adam' => {
         'environment' => 'development',
         'root_domain' => 'local.adamrabbit.net',
-        'standalone_deployment' => ENV['STANDALONE_DEPLOYMENT'].present?,
+        'standalone_deployment' => !!ENV['STANDALONE_DEPLOYMENT'],
         'deploy_key' => ENV['STANDALONE_DEPLOYMENT'] ? File.read('deploy_key') : nil,
         'internal_password' => 'fj8j4893jgg9jg9'
       }
