--- a/brain/Gemfile
+++ b/brain/Gemfile
@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 gem 'amqp'
 gem 'adam_common', path: '../adam_common'
 gem 'activesupport', require: nil
-gem 'adhearsion', github: 'adhearsion', branch: 'feature/reliable_shutdown'
+gem 'adhearsion', github: 'adhearsion', branch: 'develop'
 
 # Translate Neuron
 gem 'bing_translator'
