[BRAIN] Report exceptions to errbit

--- a/dev.env.example
+++ b/dev.env.example
@@ -17,6 +17,8 @@ ADAM_BRAIN_AMQP_HOST=local.adamrabbit.net
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
 ADAM_ROOT_DOMAIN=local.adamrabbit.net
+AHN_REPORTER_API_KEY=
+AHN_REPORTER_URL=http://errbit.mojolingo.com
 
 BING_TRANSLATE_KEY=
 BING_TRANSLATE_SECRET=
