--- a/brain/Gemfile
+++ b/brain/Gemfile
@@ -5,6 +5,8 @@ gem 'adam_common', path: '../adam_common'
 gem 'activesupport', require: nil
 gem 'adhearsion', github: 'adhearsion', branch: 'develop'
 
+gem 'adhearsion-reporter', '~> 2.0'
+
 # Translate Neuron
 gem 'bing_translator'
 gem 'iso-639'
