--- a/ears/Gemfile
+++ b/ears/Gemfile
@@ -1,14 +1,11 @@
 source 'https://rubygems.org'
 
 gem 'adhearsion', '~> 2.4'
+gem 'adhearsion-asr'
 gem 'adhearsion-reporter', '~> 2.0'
-
-gem 'httparty'
-gem 'horde_rpc'
 
 group :development, :test do
   gem 'rspec'
-  gem 'mocha'
 
   gem 'guard'
   gem 'guard-rspec'
