--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -1,15 +1,20 @@
-require 'berkshelf/vagrant'
+Vagrant.configure("2") do |config|
+  config.berkshelf.enabled = true
 
-Vagrant::Config.run do |config|
   config.vm.box       = "precise64"
   config.vm.box_url   = "http://files.vagrantup.com/precise64.box"
-  config.vm.host_name = "local.adamrabbit.net"
+  config.vm.hostname  = "local.adamrabbit.net"
 
-  config.vm.network :hostonly, "192.168.33.100"
+  config.vm.provider :virtualbox do |vb|
+    vb.name = "Adam-Snark-Rabbit-Dev"
+  end
 
-  config.vm.share_folder "adam", "/srv/adam/current", "..", nfs: true unless ENV['STANDALONE_DEPLOYMENT']
+  config.vm.network :private_network, ip: "192.168.33.100"
+
+  config.vm.synced_folder "..", "/srv/adam/current", nfs: true unless ENV['STANDALONE_DEPLOYMENT']
 
   config.vm.provision :chef_solo do |chef|
+    chef.cookbooks_path = "cookbooks"
     chef.roles_path = "roles"
     chef.data_bags_path = "data_bags"
 
