--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 .foreman
 .tags
 .tags_sorted_by_file
-dev_environment/deploy_key
+
+deploy_key
 tmp
 build
+
+# Development environment things
+.vagrant
+vagrant/
