--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,15 @@
 .tags_sorted_by_file
 
 deploy_key
-tmp
-build
+/tmp
+/log
+/build
 
 # Development environment things
 .vagrant
 vagrant/
 cookbooks
+
+# OS and editor things
+.*.sw*
+.DS_Store
