Use released Adhearsion 2.4 in all apps

--- a/fingers/Gemfile
+++ b/fingers/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'adhearsion', github: 'adhearsion', branch: 'develop'
+gem 'adhearsion', '~> 2.4'
 gem 'adhearsion-reporter', '~> 2.0'
 gem 'blather'
 gem 'amqp'
