[FEATURE] Wit support
This required restructuring the interface with neurons.  Also, my dev environment isn't entirely working right now so I wasn't able to test as well as I would like.  But it's a start and I wanted to get my changes pushed.

--- a/dev.env.example
+++ b/dev.env.example
@@ -20,5 +20,7 @@ ADAM_ROOT_DOMAIN=local.adamrabbit.net
 AHN_REPORTER_API_KEY=
 AHN_REPORTER_URL=http://errbit.mojolingo.com
 
+WIT_API_KEY=
+
 BING_TRANSLATE_KEY=
 BING_TRANSLATE_SECRET=
