--- a/ears/Gemfile
+++ b/ears/Gemfile
@@ -4,6 +4,8 @@ gem 'adhearsion', '~> 2.4'
 gem 'adhearsion-asr'
 gem 'adhearsion-reporter', '~> 2.0'
 
+gem 'att_speech', github: 'emcgee/att_speech', branch: 'master'
+
 group :development, :test do
   gem 'rspec'
 
