--- a/memory/Gemfile
+++ b/memory/Gemfile
@@ -24,6 +24,7 @@ group :assets do
 end
 
 gem 'jquery-rails'
+gem 'jquery-ui-rails'
 
 gem 'haml'
 gem 'haml-rails'
@@ -47,7 +48,7 @@ gem 'adam_common', path: '../adam_common'
 gem 'ruby_jid'
 
 group :development do
-  gem 'debugger'
+#  gem 'debugger'
 
   # html2haml
   gem 'hpricot'
