Add Tweet Neuron
I was only able to partially test this due to message not having a user object in dev. But I think it should work :)

--- a/brain/Gemfile
+++ b/brain/Gemfile
@@ -20,6 +20,9 @@ gem 'faraday_middleware'
 # Astricon Schedule Neuron
 gem 'blurrily'
 
+# Tweet gem
+gem 'twitter'
+
 group :development, :test do
   gem 'rspec'
   gem 'guard'
