[DEPLOY] Allow accessing alternative memory URL

--- a/dev.env.example
+++ b/dev.env.example
@@ -20,6 +20,7 @@ ADAM_BRAIN_AMQP_HOST=local.adamrabbit.net
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
 ADAM_ROOT_DOMAIN=local.adamrabbit.net
+ADAM_MEMORY_URL=http://local.adamrabbit.net
 AHN_REPORTER_API_KEY=
 AHN_REPORTER_URL=http://errbit.mojolingo.com
 AHN_PLATFORM_LOGGING_LEVEL=debug
