[DEPLOY] Use remote mongo server

--- a/dev.env.example
+++ b/dev.env.example
@@ -19,6 +19,7 @@ ADAM_BRAIN_AMQP_HOST=local.adamrabbit.net
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
 ADAM_ROOT_DOMAIN=local.adamrabbit.net
+MONGOID_HOST=127.0.0.1
 ADAM_MEMORY_URL=http://local.adamrabbit.net
 ADAM_MEMORY_INTERNAL_USERNAME=internal
 ADAM_MEMORY_INTERNAL_PASSWORD=fj8j4893jgg9jg9
