--- a/creds.json.example
+++ b/creds.json.example
@@ -5,7 +5,5 @@
   "twitter_secret":"changeme",
   "wit_api_key": "changeme",
   "bing_translate_key": "changeme",
-  "bing_translate_secret": "changeme",
-  "att_asr_key": "changeme",
-  "att_asr_secret": "changeme"
+  "bing_translate_secret": "changeme"
 }
