Publish memory even though tests don't run yet

--- a/memory/Makefile
+++ b/memory/Makefile
@@ -1,4 +1,4 @@
-ci: build_docker_images
+ci: build_docker_images publish_images
 
 build_docker_images:
 	docker build -t quay.io/mojolingo/adam-snark-rabbit-basic-memory .
