XMPP server build moved to https://github.com/mojolingo/adam_xmpp_server

--- a/fig.yml
+++ b/fig.yml
@@ -4,7 +4,7 @@ mongo:
     - ./mongo:/data
 
 xmpp:
-  build: xmpp
+  image: quay.io/mojolingo/adam_xmpp_server
   ports:
     - "5222:5222"
     - "5269:5269"
@@ -12,6 +12,9 @@ xmpp:
   environment:
     ERL_OPTIONS: "-noshell"
     XMPP_DOMAIN: local.adamrabbit.net
+    MEMORY_BASE_URL: http://local.adamrabbit.net
+    INTERNAL_USERNAME: internal
+    INTERNAL_PASSWORD: fj8j4893jgg9jg9
 
 brain:
   build: brain
