--- a/brain/Dockerfile
+++ b/brain/Dockerfile
@@ -1,19 +1,3 @@
-FROM ubuntu:14.04
+FROM quay.io/mojolingo/adam-snark-rabbit-ruby
 
 MAINTAINER Mojo Lingo LLC <ops@mojolingo.com>
-
-RUN apt-get update
-RUN apt-get install -y software-properties-common
-RUN apt-add-repository ppa:brightbox/ruby-ng
-RUN apt-get update
-
-RUN LC_ALL=C DEBIAN_FRONTEND=noninteractive apt-get install -y libpcre3 libpcre3-dev libxml2 libxslt1-dev ruby2.1 ruby2.1-dev build-essential
-RUN gem install bundler
-
-ADD . /app
-
-WORKDIR /app
-
-RUN bundle install
-
-CMD bin/run
